--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "abi-decoder": "^2.4.0",
     "axios": "^0.23.0",
+    "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
     "etherscan-api": "^10.0.5",
     "sqlite": "^3.0.6",
